--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -5,13 +5,14 @@
     display: flex;
     background-color: #F5f5f5;
     margin-top: 13vh;
+    font-family: 'Jost', sans-serif;
 }
 
 .loginContainer{
     display: flex;
     flex-direction: column;
     background-color: #f5f4f2;
-    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);;
+    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
     width: 50vw;
     height: 50vh; 
     justify-content: center;
@@ -33,11 +34,11 @@
     text-align: center;
     margin: 0;
     justify-content: center;
-
 }
 .loginLogo h1{
     font-size: 5rem;
-    color: rgb(49, 49, 49);
+    color: #313131;
+    height: 100%;
 }
 .loginFieldContainer{
     display: flex;
@@ -53,6 +54,7 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
+
 }
 .loginFields button{
     width: 25%;
@@ -67,7 +69,7 @@
     background-color: #ebeae3;
     justify-content: center;
     text-align: center;
-    align-items: cenmter;
+    align-items: center;
     margin: 0;
     font-size: 2rem;
     padding-top: 4%;
@@ -82,12 +84,15 @@
     align-items: center;
     justify-content: center;
 }
-
+.loginForm input{
+    font-family: 'Jost', sans-serif;
+}
 #username{
     width: 86%;
     height: 20%;
     margin-bottom: 5%;
-    font-size: 1.5rem;;
+    font-size: 1.5rem;
+    border: none;
 }
 #password{
     width: 86%;
@@ -95,6 +100,7 @@
     font-size: 1.5rem;
     margin-top: 5%;
     margin-bottom: 5%;
+    border: none;
 }
 .loginRegisterContainer{
     height: 15%;
@@ -105,15 +111,18 @@
 .loginRegisterLink{
     color: blue;
     margin-top: 2.5%;
+    cursor: pointer;
 }
 .loginRegisterLink:visited{
     color: inherit;
 }
 
 .loginSubmit{
-    background-color: #d1d0cb;
-
+    background-color: #b8b7b2;
+    border: none;
+    color: white;
 }
 .loginSubmit:hover{
     background-color: rgb(244, 247, 233);
+    color:#313131;
 }
