--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -7,7 +7,7 @@
     margin-top: 13vh;
     font-family: 'Jost', sans-serif;
 }
-
+/* Login Page Styling */
 .loginContainer{
     display: flex;
     flex-direction: column;
@@ -87,6 +87,9 @@
 .loginForm input{
     font-family: 'Jost', sans-serif;
 }
+.loginForm input::placeholder{
+    padding-left: 5%;
+}
 #username{
     width: 86%;
     height: 20%;
@@ -113,8 +116,8 @@
     margin-top: 2.5%;
     cursor: pointer;
 }
-.loginRegisterLink:visited{
-    color: inherit;
+.loginRegisterLink:hover{
+    color: purple;
 }
 
 .loginSubmit{
@@ -125,4 +128,67 @@
 .loginSubmit:hover{
     background-color: rgb(244, 247, 233);
     color:#313131;
+}
+/* Registration Styling */
+.loginRegFields{
+    
+    background-color: #ebeae3;;
+    height: 75%;
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    margin-bottom: 5%;
+}
+.loginRegLabel{
+    display: flex;
+    height: 10%;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-size: 1.5rem;
+}
+.loginRegForm{
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+}
+.loginRegForm input{
+    width: 85%;
+    height: 10%;
+    border: none;
+    font-family: 'Jost', sans-serif;
+    font-size: 1.2rem;
+}
+.loginRegForm input::placeholder{
+    padding-left: 5%;
+}
+
+.loginRegBackContainer{
+    height: 10%;
+}
+.loginRegBack{
+    align-items: center;
+    text-align: center;
+}
+.loginRegBack:hover{
+    cursor: pointer;
+    color: gray;
+}
+.loginRegSubmit{
+    border: none;
+    background-color: #b8b7b2;
+    width: 25%;
+    height: 10%;
+    font-family: 'Jost', sans-serif;
+    font-size: 1.2rem;
+    justify-content: center;
+    text-align: center;
+}
+.loginRegSubmit:hover{
+    background-color: rgb(244, 247, 233);
+    color:#313131;
+
 }
