--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -16,12 +16,23 @@
     background-color: #f5f4f2;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);;
     width: 50vw;
-    height: 30vh; 
+    height: fit-content; 
+    padding-bottom: 3%;
     align-items: center;
     margin: -5% 0 5%; 
 }
 .ticketStatusContainer h1 {
     margin-top: 4%;
+}
+
+.submittedTicket {
+    height: 10%;
+    width: 100%;
+    text-align: center;
+}
+
+.submittedTicket p {
+    margin-top: 1%;
 }
 
 .ticketFormContainer{
@@ -98,7 +109,7 @@ textarea {
     height: 50px;
     border-radius: 50%;
     position: relative;
-    top: -150px;
+    top: -120px;
     left: -54%;
     cursor: pointer;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
