styling for ticket

--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -56,7 +56,7 @@
     flex-direction: column;
     padding: 2% 8%;
     background-color: #ebeae3;
-    margin-bottom: 5%;
+    margin: -4% 10% 10% 10%;
 }
 
 .ticketForm select  {
