styling update and delete button added for development

--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -27,12 +27,15 @@
 
 .submittedTicket {
     height: 10%;
-    width: 100%;
+    width: 90%;
     text-align: center;
+    margin-top: 1%;
+    padding: 1% 0;
+    border-top: #313131 solid 1px;
 }
 
 .submittedTicket p {
-    margin-top: 1%;
+
 }
 
 .ticketFormContainer{
@@ -103,6 +106,10 @@ textarea {
     background-color: rgb(244, 247, 233);
 }
 
+#newIssueButton:active {
+    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
+}
+
 #ticketFormClose {
     border: solid #313131 1px;
     width: 50px;
@@ -129,4 +136,29 @@ textarea {
         min-height: 200px;
         min-width: 300px;
     }
+}
+
+#ticketLinkContainer {
+    width: 90%;
+    text-align: left;
+    padding: 2% 0;
+}
+
+#submittedTicketDelete {
+    margin: 1em 0 0 0;
+    padding: 0.5em 1em;
+    text-transform: capitalize;
+    border: none;
+    cursor: pointer;
+    background-color: #d1d0cb;
+}
+
+#submittedTicketDelete:hover {
+    background-color: rgb(244, 247, 233);
+
+}
+#submittedTicketDelete:active {
+    color: whitesmoke;
+    background-color: darkred;
+    border-radius: 10px;
 }
