--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -17,7 +17,7 @@
     text-align: center;
     justify-content: space-around;
     height: 50%;
-    margin-top: 25%;
+    margin-top: 10vh;
     color: #313131;
 }
 
