--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -12,12 +12,12 @@
     flex-direction: column;
     background-color: #f5f4f2;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
-    width: 50%;
+    width: 511px;
+    height: 634px; 
     align-items: center;
     text-align: center;
     justify-content: space-around;
-    height: 50%;
-    margin-top: 10vh;
+    margin-top: 5vh;
     color: #313131;
 }
 
@@ -27,7 +27,7 @@
     margin-top: 5%;
     margin-bottom: 2.5%;
     color: #313131;
-    width: 33%;
+    width: 50%;
 }
 
 .landingTechButton{
@@ -36,7 +36,7 @@
     margin-top: 5%;
     margin-bottom: 20%;
     color: #313131;
-    width: 33%;
+    width: 50%;
 }
 
 .landingAdminButton{
@@ -45,13 +45,14 @@
     margin-top: 5%;
     margin-bottom:20%;
     color: #313131;
-    width: 33%;
+    width: 50%;
 }
 
 .landingButtonLogo{
     font-size: 1.5rem;
     padding: 5%;
     color: #313131;
+    height: 50%;
 }
 .landingSubmit{
     color: white;
