--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -4,8 +4,9 @@
     align-items: center;
     display: flex;
     background-color: #F5f5f5;
-    margin-top: 13vh;
+    margin-top: 5vh;
     font-family: 'Jost', sans-serif;
+    justify-content: center;
 }
 /* Login Page Styling */
 .loginContainer{
@@ -13,12 +14,10 @@
     flex-direction: column;
     background-color: #f5f4f2;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
-    width: 50vw;
-    height: 50vh; 
+    width: 511px;
+    height: 634px; 
     justify-content: center;
     align-items: center;
-    margin-left: 25%;
-    margin-right: 25%;
 }
 @media screen and (max-height: 400px){
     .loginContainer{
