--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -4,7 +4,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    background-color: #F5f5f5;
+    /* background-color: #F5f5f5; */
     margin-top: 10vh;
     color: #313131;
     font-family: 'Jost', sans-serif;
