--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -4,7 +4,6 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    background-color: #F5f5f5;
     margin-top: 10vh;
     color: #313131;
     font-family: 'Jost', sans-serif;
@@ -15,11 +14,12 @@
     flex-direction: column;
     background-color: #f5f4f2;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);;
-    width: 50vw;
-    height: fit-content; 
+    width: 60vw;
+    height: 20vh;
+    overflow: scroll; 
     padding-bottom: 3%;
     align-items: center;
-    margin: -5% 0 5%; 
+    margin: -8% 0 5%; 
 }
 .ticketStatusContainer h1 {
     margin-top: 4%;
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: column;
     width: 50vw;
-    max-height:max-content;
+    max-height: 45vh;
     font-size: 1rem;
     background-color: #f5f4f2;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
@@ -114,7 +114,7 @@ textarea {
     height: 50px;
     border-radius: 50%;
     position: relative;
-    top: -120px;
+    top: -10px;
     left: -54%;
     cursor: pointer;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
@@ -129,7 +129,6 @@ textarea {
 }
 #ticketLinkContainer {
     width: 90%;
-    margin: 2%;
 }
 
 @media screen and (max-height: 400px){
