--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -41,7 +41,6 @@
     width: 50vw;
     max-height: 45vh;
     font-size: 1rem;
-    background-color: #f5f4f2;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
     justify-content: center;
     text-align: center;
@@ -73,8 +72,8 @@
     height: 20%;
     padding:3% 0 3% 2%; 
     font-size: 1rem;
+    transition: ease 300ms;
 }
-
 
 textarea {
     padding: 3% 2%;
@@ -110,25 +109,32 @@ textarea {
 
 #ticketFormClose {
     border: solid #313131 1px;
-    width: 50px;
-    height: 50px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
     position: relative;
-    top: -10px;
-    left: -54%;
+    right: 48%;
+    
+    font-size: small;
     cursor: pointer;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
     background-color: #d1d0cb;
+    transition: ease 300ms;
 }
+
 #ticketFormClose:hover {
     background-color: rgb(244, 247, 233);
 }
+
 #ticketFormClose:active {
     scale: 1.05rem;
     border-color: none;
+    background-color: #ff3333;
 }
 #ticketLinkContainer {
     width: 90%;
+    position: absolute;
+    bottom: 3%;
 }
 
 @media screen and (max-height: 400px){
