--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     /* background-color: #F5f5f5; */
-    margin-top: 10vh;
+    margin-top: 5vh;
     color: #313131;
     font-family: 'Jost', sans-serif;
 }
@@ -15,12 +15,12 @@
     flex-direction: column;
     background-color: #f5f4f2;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);;
-    width: 60vw;
-    height: 20vh;
-    overflow: scroll; 
+    width: 634px;
+    height: 511px;
+    overflow-x: hidden;
+    overflow-y: scroll; 
     padding-bottom: 3%;
     align-items: center;
-    margin: -8% 0 5%; 
 }
 .ticketStatusContainer h1 {
     margin-top: 4%;
@@ -206,6 +206,7 @@ textarea {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    display: flex;
   }
 
   .actionCell {
