--- a/src/components/Administrator/administrator.css
+++ b/src/components/Administrator/administrator.css
@@ -98,17 +98,13 @@ html, body{
     max-width: 100%;
     height: auto;
 }
-
-table,
-td {
+.table-employee table, td {
     width: 60vw;
     border: 1px solid #333;
     font-size: 1.2rem;
     text-align: center;
 }
-
-thead,
-tfoot {
+.table-employee thead, tfoot {
     background-color: #333;
     color: #fff;
 }
