--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -11,19 +11,19 @@
 }
 
 .ticketStatusContainer{
-    display: flex;
+    display: inline-block;
     flex-direction: column;
     background-color: #f5f4f2;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);;
     width: 634px;
     height: 511px;
-    overflow-x: hidden;
     overflow-y: scroll; 
-    padding-bottom: 3%;
+    overflow-x: hidden;
     align-items: center;
 }
-.ticketStatusContainer h1 {
+.ticketStatusContainer h2 {
     margin-top: 4%;
+    text-align: center;
 }
 
 .submittedTicket {
@@ -47,14 +47,14 @@
     text-align: center;
     align-items: center;
     font-size: 2rem;
-    padding-top: 4%;
+
     margin-bottom: 5%;
 }
 
 .ticketForm{
     display: flex;
     flex-direction: column;
-    padding: 2% 8%;
+
     background-color: #ebeae3;
     margin: -4% 10% 10% 10%;
 }
@@ -63,7 +63,7 @@
     margin: 3% 0;
     width: 100%;
     height: 20%;
-    padding:3% 0 3% 2%; 
+
     font-size: 1rem;
 }
 
@@ -75,7 +75,9 @@
     font-size: 1rem;
     transition: ease 300ms;
 }
-
+.ticketHeaderContainer{
+    width: 100%;
+}
 textarea {
     padding: 3% 2%;
     font-size: 1rem;
@@ -147,14 +149,15 @@ textarea {
 
 /* Table data  */
 .ticketsTable {
-    width: 100%;
+    width: 50%;
+    border: none;
     border-collapse: collapse;
     margin-top: 20px;
   }
   
   .ticketsTable th, .ticketsTable td {
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 0px;
     text-align: left;
   }
   
@@ -173,7 +176,7 @@ textarea {
   .ticketsTable td button {
     background-color: #d1d0cb;
     border: none;
-    padding: 5px 10px;
+
     cursor: pointer;
     transition: ease 300ms;
   }
@@ -189,35 +192,51 @@ textarea {
   }
 
   .descriptionCell {
-    max-width: 1rem;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-
-  .locationCell {
-    max-width: 3rem;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
-  @media screen and (max-width: 680px) {
-    .locationCell {
-        display: none;
-    }
-  }
-
-  .categoryCell {
-    max-width: 1rem;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     display: flex;
+    width: 30%;
+    font-size: 1rem;
+  }
+  .headerCell{
+    width: 10%;
+  }
+
+  .categoryCell {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: flex;
+    width: 10%;
+  }
+
+  .locationCell {
+    width: 10%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   .actionCell {
-    max-width: 1rem;
     white-space: nowrap;
     overflow: hidden;
+    width: 6.25%;
   }
   
+  .expandedRow{
+    background-color: red;
+    width: 100%;
+
+  }
+  .expandedRowContainer{
+    display: flex;
+    width: 100%;
+  }
+  .fullDescription{
+    text-align: left;
+    margin-left: 2rem;
+  }
+  .ticketStatusContainer tr{
+    display: flex;
+  }
