change styling for ticket status / create page     dropdown box for extended full description     style overhaul

--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -17,13 +17,32 @@
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);;
     width: 634px;
     height: 511px;
-    overflow-y: scroll; 
-    overflow-x: hidden;
+    overflow-y: scroll;
     align-items: center;
 }
+.ticketStatusContainer::-webkit-scrollbar {
+    width: 12px; 
+    
+}
+
+.ticketStatusContainer::-webkit-scrollbar-thumb {
+    background-color: #d1d0cb; 
+    border-radius: 6px; 
+    border: 3px solid #f5f4f2; 
+}
+
+.ticketStatusContainer::-webkit-scrollbar-track {
+    background-color: #f5f4f2; 
+}
 .ticketStatusContainer h2 {
-    margin-top: 4%;
+    position: sticky;
+    top: 0;
+    z-index: 1;
     text-align: center;
+    background-color:#f5f4f2;
+    border-bottom: 1px solid #313131;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .submittedTicket {
@@ -39,7 +58,7 @@
 .ticketFormContainer{
     display: flex;
     flex-direction: column;
-    width: 50vw;
+    width: 634px;
     max-height: 45vh;
     font-size: 1rem;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
@@ -47,16 +66,21 @@
     text-align: center;
     align-items: center;
     font-size: 2rem;
-
+    margin-top: 20px;
     margin-bottom: 5%;
+    background-color: #f5f4f2;
 }
 
 .ticketForm{
     display: flex;
     flex-direction: column;
-
     background-color: #ebeae3;
-    margin: -4% 10% 10% 10%;
+    margin-top: 10px;
+    margin-bottom: 55px;
+    padding-top: 10px;
+    padding-left: 25px;
+    padding-right: 25px;
+    padding-bottom: 25px;
 }
 
 .ticketForm select  {
@@ -78,10 +102,10 @@
 .ticketHeaderContainer{
     width: 100%;
 }
-textarea {
+/* textarea {
     padding: 3% 2%;
     font-size: 1rem;
-}
+} */
 
 .createSubmit{
     background-color: #d1d0cb;
@@ -100,6 +124,8 @@ textarea {
     border-radius: 25px;
     background-color: #d1d0cb;
     transition: ease 300ms;
+    margin-top: 50px;
+    font-family: 'Jost', sans-serif;
 }
 
 #newIssueButton:hover {
@@ -149,16 +175,12 @@ textarea {
 
 /* Table data  */
 .ticketsTable {
-    width: 50%;
     border: none;
-    border-collapse: collapse;
-    margin-top: 20px;
+    overflow-y: scroll;
   }
   
   .ticketsTable th, .ticketsTable td {
     border: 1px solid #ddd;
-    padding: 0px;
-    text-align: left;
   }
   
   .ticketsTable th {
@@ -167,18 +189,21 @@ textarea {
   
   .ticketsTable tbody tr:nth-child(odd) {
     background-color: #f9f9f9;
+    
   }
   
   .ticketsTable tbody tr:hover {
     background-color: #e6f7ff;
+    cursor: pointer;
   }
   
   .ticketsTable td button {
     background-color: #d1d0cb;
     border: none;
-
     cursor: pointer;
     transition: ease 300ms;
+    width: 100%;
+    height: 33px;
   }
 
   .ticketsTable td button:hover {
@@ -192,51 +217,82 @@ textarea {
   }
 
   .descriptionCell {
-    white-space: nowrap;
+    white-space: normal;
+    text-overflow:ellipsis;
+    width: 100%;
+    max-width: 311px;
+    text-align: left;
+    padding-left: 10px;
+  }
+  .descriptionText{
     overflow: hidden;
     text-overflow: ellipsis;
-    display: flex;
-    width: 30%;
-    font-size: 1rem;
+    white-space: nowrap;
+    width: 100%;
+    max-width: 311px;
+    text-align: left;
+    padding-left: 10px;
   }
   .headerCell{
-    width: 10%;
+    width: 100%;
   }
 
   .categoryCell {
-    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     display: flex;
-    width: 10%;
+    width: 100%;
+  }
+  .categoryCell text{
+    width: 30%;
+    text-indent: 10%;
   }
 
   .locationCell {
-    width: 10%;
-    white-space: nowrap;
+    width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
+    text-align: left;
+    padding-left: 10px;
   }
 
   .actionCell {
-    white-space: nowrap;
     overflow: hidden;
-    width: 6.25%;
+    width: 7%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  .actionCell button {
+    text-align: center;
+    align-items: center;
+    font-family: 'Jost', sans-serif;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
   }
   
   .expandedRow{
-    background-color: red;
+    background-color: rgb(248, 248, 248);
     width: 100%;
 
   }
   .expandedRowContainer{
-    display: flex;
     width: 100%;
+    flex-grow: 1;
   }
   .fullDescription{
     text-align: left;
-    margin-left: 2rem;
-  }
-  .ticketStatusContainer tr{
+    height: 200px;
+    width:100%;
+    max-width: 100%;
     display: flex;
+    background-color: rgb(240, 239, 239);
+    border-right: 1px outset #313131;
+    border-bottom: 1px outset #313131;
+    border-left: 1px inset #313131;
   }
+  .fullDescription:hover{
+    cursor: default;
+  }
+ 
