--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -242,6 +242,7 @@
     text-overflow: ellipsis;
     display: flex;
     width: 100%;
+    height: 35px;
   }
   .categoryCell text{
     width: 30%;
