--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -289,9 +289,9 @@
     max-width: 100%;
     display: flex;
     background-color: rgb(250, 249, 249);
-    border-right: 1px outset #313131;
-    border-bottom: 1px outset #313131;
-    border-left: 1px inset #313131;
+    border-right: 1px outset #eeeeee;
+    border-bottom: 3px outset #e9e9e9;
+    border-left: 1px inset #eeeeee;
   }
   .fullDescription:hover{
     cursor: default;
