--- a/src/components/Technician/technician.css
+++ b/src/components/Technician/technician.css
@@ -42,4 +42,27 @@
     width: 40vw;
     background-color: white;
     border: 1px black solid;
+    overflow: scroll;
+    white-space: scroll;
+}
+
+.table-ticket table {
+    width: 60vw;
+    border: 1px solid #313131;
+    font-size: 1rem;
+    text-align: center;
+}
+
+.table-ticket tr {
+    max-height: 2vh;
+    font-size: 0.8rem;
+    text-align: center;
+    overflow: clip;
+    white-space: collapse balance;
+    text-overflow: ellipsis;
+}
+
+.table-ticket thead, tfoot {
+    background-color: #313131;
+    color: #fff;
 }
