--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -3,7 +3,7 @@
     bottom: 20px;
     right: 20px;
     z-index: 1000;
-    background-color: 	#818589;
+    background-color: 	 #ebeae3;
     color: black;
     border: none;
     border-radius: 50%;
@@ -19,7 +19,7 @@
 }
 
 .chat-toggle-button:hover {
-    background-color: #ebeae3;
+    background-color: #818589;
     box-shadow: 0 6px 12px rgba(0,0,0,0.3);
 }
 
@@ -27,8 +27,6 @@
 .chat-toggle-button:before {
     content: '\1F4AC';
 }
-
-
 
 .Chatbox {
     position: fixed;
@@ -39,13 +37,14 @@
     z-index: 1001;
     background-color: #f5f5f5;
     border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    overflow: auto;
-    box-shadow: 0px 0px 30px 12px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1), 0px 0px 30px 12px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    display: flex;
     &::-webkit-scrollbar {
         display: none;
     }
 }
+
 
 .Chatbox {
     -ms-overflow-style: none;
@@ -59,5 +58,9 @@
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 8px   
+}
+
+.chat-input {
+
 }
 
