--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -33,34 +33,45 @@
     bottom: 1%;
     right: 1%;
     width: 30vw;
-    height: 80%;
+    height: 45%;
     z-index: 1001;
+    padding-bottom: 3%;
     background-color: #f5f5f5;
-    border-radius: 10px;
+    /* border-radius: 10px; */
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1), 0px 0px 30px 12px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     display: flex;
+    flex-direction: column-reverse;
     &::-webkit-scrollbar {
-        display: none;
+        /* display: none; */
     }
 }
 
 
 .Chatbox {
-    -ms-overflow-style: none;
-    scrollbar-width: none;
+    /* -ms-overflow-style: none;
+    scrollbar-width: none; */
 }
 
 .chatlist {
-    height: 100%;
     word-wrap: break-word;
     width: 100%;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    padding-left: 8px   
+    /* padding-top: 5px;
+    padding-bottom: 5px; */
+    padding-left: 8px    
 }
 
 .chat-input {
-
+    
 }
 
+.chat-form{
+    position: fixed;
+    bottom: 1%;
+    width: 100%;
+    display: flex;
+}
+.message-list{
+
+
+}
