--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -10,6 +10,11 @@
     font-family: 'Jost', sans-serif;
 }
 
+#currentUserContainer {
+  color: #fff;
+  
+}
+
 .ticketStatusContainer{
     display: inline-block;
     flex-direction: column;
@@ -59,35 +64,30 @@
     display: flex;
     flex-direction: column;
     width: 634px;
-    max-height: 45vh;
+    max-height: fit-content;
     font-size: 1rem;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
     justify-content: center;
     text-align: center;
     align-items: center;
     font-size: 2rem;
-    margin-top: 20px;
-    margin-bottom: 5%;
-    background-color: #f5f4f2;
+    /* background-color: #f5f4f2; */
 }
 
 .ticketForm{
     display: flex;
     flex-direction: column;
     background-color: #ebeae3;
-    margin-top: 10px;
+    margin-top: 35px;
     margin-bottom: 55px;
-    padding-top: 10px;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-bottom: 25px;
+    padding: 10px 25px 25px 25px
 }
 
 .ticketForm select  {
     margin: 3% 0;
     width: 100%;
     height: 20%;
-
+    padding: 5px 0;
     font-size: 1rem;
 }
 
@@ -99,13 +99,16 @@
     font-size: 1rem;
     transition: ease 300ms;
 }
+
 .ticketHeaderContainer{
     width: 100%;
 }
-/* textarea {
-    padding: 3% 2%;
+
+textarea {
+    padding: 5px;
     font-size: 1rem;
-} */
+    margin: 3% 0
+}
 
 .createSubmit{
     background-color: #d1d0cb;
@@ -118,7 +121,7 @@
 
 #newIssueButton {
     height: 50px;
-    width: 10%;
+    width: 120px;
     text-align: center;
     font-size: large;
     border-radius: 25px;
@@ -140,7 +143,7 @@
     border: solid #313131 1px;
     width: 20px;
     height: 20px;
-    border-radius: 50%;
+    /* border-radius: 50%; */
     position: relative;
     right: 48%;
     
