--- a/src/components/Technician/technician.css
+++ b/src/components/Technician/technician.css
@@ -42,27 +42,52 @@
     width: 40vw;
     background-color: white;
     border: 1px black solid;
-    overflow: scroll;
-    white-space: scroll;
+    overflow-y: scroll;
 }
 
 .table-ticket table {
-    width: 60vw;
-    border: 1px solid #313131;
+    width: 100%;
     font-size: 1rem;
     text-align: center;
+    table-layout: fixed;
+    border-collapse: collapse;
 }
 
-.table-ticket tr {
-    max-height: 2vh;
+.table-ticket td {
+    padding: 0;
+    border: 1px solid #313131;
+}
+
+.table-ticket tbody tr td {
+    height: 40px;
     font-size: 0.8rem;
-    text-align: center;
-    overflow: clip;
-    white-space: collapse balance;
+}
+
+.table-ticket tbody tr:hover, tr:hover td > select {
+    background-color: yellow;
+}
+
+.table-ticket-data tr {
+    overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
 }
 
-.table-ticket thead, tfoot {
+.table-ticket thead {
+    position: sticky;
+    top: 0;
     background-color: #313131;
     color: #fff;
+}
+
+select {
+    width: 100%;
+    height: 100%;
+    border: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
