background color of back container removed to show bg image better

--- a/src/components/Technician/technician.css
+++ b/src/components/Technician/technician.css
@@ -1,7 +1,7 @@
 .technician-container {
     height: 80vh;
     width: 100vw;
-    background-color: #F5f5f5;
+    /* background-color: #F5f5f5; */
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
