--- a/src/components/home.css
+++ b/src/components/home.css
@@ -3,7 +3,7 @@
     height: 100%;
     align-items: center;
     display: flex;
-    background-color: #F5f5f5;
+    /* background-color: #F5f5f5; */
     margin-top: 5vh;
     font-family: 'Jost', sans-serif;
     justify-content: center;
