--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -22,7 +22,7 @@
 .ticketStatusContainer{
     display: inline-block;
     flex-direction: column;
-    background-color: #f5f4f2;
+    /* background-color: #f5f4f2; */
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);;
     width: 634px;
     height: 511px;
@@ -31,7 +31,6 @@
 }
 .ticketStatusContainer::-webkit-scrollbar {
     width: 12px; 
-    
 }
 
 .ticketStatusContainer::-webkit-scrollbar-thumb {
@@ -41,7 +40,7 @@
 }
 
 .ticketStatusContainer::-webkit-scrollbar-track {
-    background-color: #f5f4f2; 
+    /* background-color: #f5f4f2;  */
 }
 .ticketStatusContainer h2 {
     position: sticky;
@@ -68,7 +67,7 @@
     display: flex;
     flex-direction: column;
     width: 634px;
-    max-height: fit-content;
+    height: 511px;
     font-size: 1rem;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
     justify-content: center;
@@ -82,9 +81,8 @@
     display: flex;
     flex-direction: column;
     background-color: #ebeae3;
-    margin-top: 35px;
-    margin-bottom: 55px;
-    padding: 10px 25px 25px 25px
+    margin: auto;
+    padding: 25px 60px
 }
 
 .ticketForm select  {
@@ -93,6 +91,7 @@
     height: 20%;
     padding: 5px 0;
     font-size: 1rem;
+    cursor: pointer;
 }
 
 .createSubmit {
@@ -101,7 +100,15 @@
     height: 20%;
     padding:3% 0 3% 2%; 
     font-size: 1rem;
+    letter-spacing: .3em;
     transition: ease 300ms;
+    background-color: #d1d0cb;
+    cursor: pointer;
+    border: solid 1px #313131;
+}
+
+.createSubmit:hover{
+  background-color: rgb(244, 247, 233);
 }
 
 .ticketHeaderContainer{
@@ -114,16 +121,7 @@ textarea {
     margin: 3% 0
 }
 
-.createSubmit{
-    background-color: #d1d0cb;
-
-}
-
-.createSubmit:hover{
-    background-color: rgb(244, 247, 233);
-}
-
-#newIssueButton {
+.ticketBtn {
     height: 50px;
     width: 120px;
     text-align: center;
@@ -133,40 +131,19 @@ textarea {
     transition: ease 300ms;
     margin-top: 50px;
     font-family: 'Jost', sans-serif;
-}
-
-#newIssueButton:hover {
-    background-color: rgb(244, 247, 233);
-}
-
-#newIssueButton:active {
-    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
-}
-
-#ticketFormClose {
-    border: solid #313131 1px;
-    width: 20px;
-    height: 20px;
-    /* border-radius: 50%; */
-    position: relative;
-    right: 48%;
-    
-    font-size: small;
     cursor: pointer;
-    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
-    background-color: #d1d0cb;
-    transition: ease 300ms;
 }
 
-#ticketFormClose:hover {
+.ticketBtn:hover {
     background-color: rgb(244, 247, 233);
 }
 
-#ticketFormClose:active {
-    scale: 1.05rem;
-    border-color: none;
-    background-color: #ff3333;
+.ticketBtn:active {
+    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
+    background-color: #313131;
+    color: #d1d0cb;
 }
+
 #ticketLinkContainer {
     width: 90%;
     position: absolute;
@@ -191,7 +168,8 @@ textarea {
   }
   
   .ticketsTable th {
-    background-color: #f2f2f2;
+    background-color: #313131;
+    color: #f1f2f2
   }
   
   .ticketsTable tbody tr:nth-child(odd) {
@@ -220,7 +198,7 @@ textarea {
   
   .ticketsTable td button:active {
     background-color: #ff3333;
-    color: rgb(244, 247, 233);
+    color: #f1f2f2;
   }
 
   .descriptionCell {
@@ -239,9 +217,6 @@ textarea {
     max-width: 311px;
     text-align: left;
     padding-left: 10px;
-  }
-  .headerCell{
-    width: 100%;
   }
 
   .categoryCell {
