--- a/src/components/Technician/technician.css
+++ b/src/components/Technician/technician.css
@@ -12,7 +12,8 @@
     height: 70vh;
     width: 40vw;
     background-color: #f5f4f2;
-    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);    margin: 20px;
+    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);    
+    margin: 20px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -24,7 +25,8 @@
     height: 70vh;
     width: 40vw;
     background-color: #f5f4f2;
-    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);    margin: 20px;
+    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);    
+    margin: 20px;
     padding: 20px;
     display: flex;
     flex-direction: column;
@@ -42,7 +44,7 @@
     width: 40vw;
     background-color: white;
     border: 1px black solid;
-    overflow-y: scroll;
+    overflow: scroll;
 }
 
 .table-ticket table {
@@ -58,19 +60,23 @@
     border: 1px solid #313131;
 }
 
+.table-ticket th, .table-ticket td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .table-ticket tbody tr td {
     height: 40px;
     font-size: 0.8rem;
 }
 
 .table-ticket tbody tr:hover, tr:hover td > select {
-    background-color: yellow;
+    background-color: rgb(241, 241, 212);
 }
 
-.table-ticket-data tr {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+.table-ticket-data td {
+    max-width: 10vw;
 }
 
 .table-ticket thead {
@@ -80,7 +86,7 @@
     color: #fff;
 }
 
-select {
+.table-ticket-data select {
     width: 100%;
     height: 100%;
     border: none;
@@ -90,4 +96,21 @@ select {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+}
+
+.table-ticket-data input {
+    width: 100%;
+    height: 100%;
+    background-color: #f9fbf9;
+    border: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.table-ticket-data input:active {
+    background-color: #b1d7b2;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
