--- a/src/components/Landing/landing.css
+++ b/src/components/Landing/landing.css
@@ -10,8 +10,8 @@
 .landingContainer{
     display: flex;
     flex-direction: column;
-    background-color: #f5f4f2;
-    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
+    /* background-color: #f5f4f2; */
+    /* box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10); */
     width: 511px;
     height: 634px; 
     align-items: center;
