--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -9,6 +9,7 @@
     justify-content: center;
 }
 /* Login Page Styling */
+
 .loginContainer{
     display: flex;
     flex-direction: column;
@@ -25,6 +26,18 @@
         min-width: 300px;
     }
 }
+.night-mode .loginContainer{
+    display: flex;
+    flex-direction: column;
+    background-color: #313131;
+    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
+    width: 511px;
+    height: 634px; 
+    justify-content: center;
+    align-items: center;
+}
+
+
 .loginLogo{
     color: white;
     width: 100%;
@@ -80,6 +93,8 @@
 .loginErrorContainer{
     padding-bottom: 5%;
 }
+
+
 .loginForm{
     display: flex;
     flex-direction: column;
@@ -99,6 +114,30 @@
 .loginForm input::placeholder{
     font-style: italic;
 }
+.loginForm-nm{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 65%;
+    background-color:#ebeae3;
+    align-items: center;
+    justify-content: center;
+}
+.loginForm-nm input{
+    font-family: 'Jost', sans-serif;
+    padding-left: 5%;
+    width: 75%;
+    height: 15%;
+    margin-bottom: 10%;
+    background-color: #8f8f8f;
+    color: white;
+}
+.loginForm-nm input::placeholder{
+    font-style: italic;
+}
+
+
+
 #username{
     width: 86%;
     height: 20%;
@@ -140,7 +179,6 @@
 }
 /* Registration Styling */
 .loginRegFields{
-    
     background-color: #ebeae3;;
     height: 75%;
     display: flex;
@@ -148,6 +186,7 @@
     width: 85%;
     margin-bottom: 5%;
 }
+
 .loginRegLabel{
     display: flex;
     height: 10%;
@@ -157,6 +196,17 @@
     font-size: 1.5rem;
     color:#796d5c;
 }
+.loginRegLabel-nm{
+    display: flex;
+    height: 10%;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    background-color:#313131;
+    color: white;
+}
+
 .loginRegForm{
     display: flex;
     flex-direction: column;
@@ -177,19 +227,55 @@
     padding-left: 0%;
     font-style:italic;
 }
+.loginRegForm-nm{
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
+    background-color: #313131;
+}
+.loginRegForm-nm input{
+    width: 85%;
+    height: 10%;
+    border: none;
+    font-family: 'Jost', sans-serif;
+    font-size: 1.2rem;
+    padding-left: 3%;
+    background-color: #8f8f8f;
+    color: white;
+}
+.loginRegForm-nm input::placeholder{
+    padding-left: 0%;
+    font-style:italic;
+    color: rgb(179, 179, 179);
+}
+
 
 .loginRegBackContainer{
     height: 10%;
+}
+.loginRegBackContainer-nm{
+    height: 10%;
+    background-color: #313131;
 }
 .loginRegBack{
     align-items: center;
     text-align: center;
     color: #e78f29;
 }
-.loginRegBack:hover{
+.loginRegBack:hover, .loginRegBack-nm:hover{
     cursor: pointer;
     color: rgb(255, 255, 255);
 }
+.loginRegBack-nm{
+    align-items: center;
+    text-align: center;
+    color: #e78f29;
+    background-color: #313131;
+}
+
 .loginRegSubmit{
     border: none;
     background-color: #b8b7b2;
@@ -204,8 +290,23 @@
 .loginRegSubmit:hover{
     background-color: rgb(244, 247, 233);
     color:#313131;
-
 }
+.loginRegSubmit-nm{
+    border: none;
+    background-color: #b8b7b2;
+    width: 25%;
+    height: 10%;
+    font-family: 'Jost', sans-serif;
+    font-size: 1.2rem;
+    justify-content: center;
+    text-align: center;
+    color: white;
+}
+.loginRegSubmit-nm:hover{
+    background-color: rgb(244, 247, 233);
+    color:#313131;
+}
+
 
 .night-mode .loginContainer{
         display: flex;
