more nightmode css

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 html, body{
     height: 100%;
     width: 100%;
-    background-color: #f5f4f2;
+    background-color: #e7e5df;
     font-family: 'Jost', sans-serif;
 }
 .appLogo{
