--- a/src/components/home.css
+++ b/src/components/home.css
@@ -12,7 +12,7 @@
 .homeContainer{
     display: flex;
     flex-direction: column;
-    background-color: #f5f4f2;
+    background-color: #e4e0d7;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
     width: 511px;
     height: 634px; 
