--- a/src/components/TicketCreate/ticket.css
+++ b/src/components/TicketCreate/ticket.css
@@ -24,7 +24,7 @@
     flex-direction: column;
     /* background-color: #f5f4f2; */
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);;
-    width: 634px;
+    width: 700px;
     height: 511px;
     overflow-y: scroll;
     align-items: center;
@@ -63,7 +63,7 @@
 .ticketFormContainer{
     display: flex;
     flex-direction: column;
-    width: 634px;
+    width: 700px;
     height: 511px;
     font-size: 1rem;
     box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
@@ -79,7 +79,7 @@
     flex-direction: column;
     background-color: #ebeae3;
     margin: auto;
-    padding: 25px 60px
+    padding: 35px 80px
 }
 
 .ticketForm select  {
@@ -158,6 +158,8 @@ textarea {
 .ticketsTable {
     border: none;
     overflow-y: scroll;
+    overflow-x: hidden;
+    width: 100%;
 }
   
 .ticketsTable th, .ticketsTable td {
@@ -183,7 +185,7 @@ textarea {
   border: none;
   cursor: pointer;
   transition: ease 300ms;
-  width: 100%;
+  width: 10%;
   height: 33px;
   padding: 0 10px;
 }
@@ -198,20 +200,11 @@ textarea {
   color: #f1f2f2;
 }
 
-.descriptionCell {
-  white-space: normal;
-  text-overflow:ellipsis;
-  width: 100%;
-  max-width: 311px;
-  text-align: left;
-  padding-left: 10px;
-}
-
 .descriptionText{
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
-  width: 100%;
+  width: 50%;
   max-width: 311px;
   text-align: left;
   padding-left: 10px;
@@ -227,16 +220,7 @@ textarea {
   display: flex;
   width: 100%;
   height: 35px;
-  margin: 0 0 0 0;
-}
-
-.headerCell {
-  padding: 0 10px;
-}
-
-.categoryCell text{
-  width: 20%;
-  text-indent: 10%;
+  padding: 0 0 0 5px;
 }
 
 .locationCell {
@@ -244,7 +228,10 @@ textarea {
   text-overflow: ellipsis;
   text-align: left;
   padding: 0 10px;
+  white-space: nowrap;
+
 }
+
 
 .expandedRow{
   background-color: rgb(248, 248, 248);
