--- a/src/components/Administrator/administrator.css
+++ b/src/components/Administrator/administrator.css
@@ -85,6 +85,7 @@ html, body{
     width: 60vw;
     background-color: white;
     border: 1px #313131 solid;
+    overflow-y: scroll;
 }
 
 .material-symbols-outlined {
