--- a/src/components/Administrator/administrator.css
+++ b/src/components/Administrator/administrator.css
@@ -26,10 +26,28 @@ html, body{
     justify-content: space-evenly;
     align-items: center;
 }
+.administrator-employees-view-nm {
+    height: 70vh;
+    width: 70vw;
+    background-color: #383838;
+    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);
+    margin: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+}
 
 .administrator-title {
     font-size: 2rem;
     color: #313131;
+    text-align: center;
+}
+.administrator-title-nm {
+    font-size: 2rem;
+    color: #ffffff;
     text-align: center;
 }
 
@@ -42,11 +60,29 @@ html, body{
     justify-content: center;
     align-items: center;
 }
+.administrator-outer-container-nm {
+    height: 70vh;
+    width: 70vw;
+    background-color: #585858;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
 
 .administrator-menu-container {
     height: 60vh;
     width: 10vh;
     background-color: #ebeae3;
+    display: flex;
+    flex-direction: column;
+    justify-content: right;
+}
+.administrator-menu-container-nm {
+    height: 60vh;
+    width: 10vh;
+    background-color: #585858;
     display: flex;
     flex-direction: column;
     justify-content: right;
@@ -65,6 +101,19 @@ html, body{
 .administrator-employee-form:hover {
     background-color: #66a2d7;
 }
+.administrator-employee-form-nm {
+    height: 50px;
+    width: 10vh;
+    background-color: #4a446d;
+    border: 1px #313131 solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
+
+.administrator-employee-form-nm:hover {
+    background-color: #6d6694;
+}
 
 .administrator-employee-filter {
     height: 50px;
@@ -79,14 +128,31 @@ html, body{
 .administrator-employee-filter:hover {
     background-color: #66a2d7;
 }
+.administrator-employee-filter-nm {
+    height: 50px;
+    width: 10vh;
+    background-color: #4a446d;
+    border: 1px #313131 solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.administrator-employee-filter-nm:hover {
+    background-color: #6d6694;
+}
 .administrator-inner-container {
     height: 60vh;
     width: 60vw;
     background-color: white;
     border: 1px #313131 solid;
 }
-
+.administrator-inner-container-nm {
+    height: 60vh;
+    width: 60vw;
+    background-color: rgb(128, 128, 128);
+    /* border: 1px #313131 solid; */
+}
 .material-symbols-outlined {
   font-variation-settings:
   'FILL' 0,
