--- a/src/components/Technician/technician.css
+++ b/src/components/Technician/technician.css
@@ -20,7 +20,6 @@
     justify-content: space-evenly;
     align-items: center;
 }
-
 .technician-assignedTickets {
     height: 70vh;
     width: 40vw;
@@ -33,7 +32,32 @@
     justify-content: space-evenly;
     align-items: center;
 }
-
+.technician-unassignedTickets-nm {
+    height: 70vh;
+    width: 40vw;
+    background-color: #313131;
+    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);    
+    margin: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+}
+.technician-assignedTickets-nm {
+    height: 70vh;
+    width: 40vw;
+    background-color: #313131;
+    box-shadow: 0px 0px 30px 12px rgba(0,0,0,0.10);    
+    margin: 20px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    color: white;
+}
 .technician-title {
     font-size: 2rem;
     text-align: center;
@@ -43,6 +67,13 @@
     height: 60vh;
     width: 40vw;
     background-color: white;
+    border: 1px black solid;
+    overflow: scroll;
+}
+.technician-ticketContainer-nm {
+    height: 60vh;
+    width: 40vw;
+    background-color: #444444;
     border: 1px black solid;
     overflow: scroll;
 }
@@ -74,6 +105,9 @@
 .table-ticket tbody tr:hover, tr:hover td > select {
     background-color: rgb(241, 241, 212);
 }
+.table-ticket-nm tbody tr:hover, tr:hover td > select {
+    background-color: rgb(179, 143, 110);
+}
 
 .table-ticket-data td {
     max-width: 10vw;
@@ -85,8 +119,25 @@
     background-color: #313131;
     color: #fff;
 }
+.table-ticket-nm thead {
+    position: sticky;
+    top: 0;
+    background-color: #313131;
+    color: #fff;
+}
 
 .table-ticket-data select {
+    width: 100%;
+    height: 100%;
+    border: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
+.table-ticket-data-nm select {
     width: 100%;
     height: 100%;
     border: none;
@@ -111,6 +162,22 @@
 
 .table-ticket-data input:active {
     background-color: #b1d7b2;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+.table-ticket-data-nm input {
+    width: 100%;
+    height: 100%;
+    background-color: #7e7e7e;
+    border: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+.table-ticket-data-nm input:active {
+    background-color: #75757a;
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
