nightmode button css

--- a/src/components/Nightmode/NightModeToggle.css
+++ b/src/components/Nightmode/NightModeToggle.css
@@ -25,7 +25,7 @@
   }
   
   .toggle-input:checked + .toggle-slider {
-    background-color: #2196F3; /* Toggle color in night mode */
+    background-color: #58405e; /* Toggle color in night mode */
   }
   
   .toggle-slider:before {
