tech chat functional

--- a/src/components/Technician/technician.css
+++ b/src/components/Technician/technician.css
@@ -181,3 +181,7 @@
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
+
+.table-ticket-data.fullDescription {
+    background-color: yellow;
+}
